05-alb-rollout/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-rollout-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: alb-rollout
---
apiVersion: v1
kind: Service
metadata:
  name: alb-rollout-canary
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: alb-rollout
